--- a/GuideMvvm/GuideMvvm/Views/InitialPage.xaml
+++ b/GuideMvvm/GuideMvvm/Views/InitialPage.xaml
@@ -8,7 +8,12 @@
              sharedTransitions:SharedTransitionNavigationPage.TransitionDuration="300"
              sharedTransitions:SharedTransitionNavigationPage.BackgroundAnimation="SlideFromRight">
     <Grid BackgroundColor="#464FBC">
-        <StackLayout VerticalOptions="Center">            
+        <Label HorizontalOptions="Start" VerticalOptions="Start" Text="←" FontSize="20" Margin="10" TextColor="White">
+            <Label.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding BackCommand}"/>
+            </Label.GestureRecognizers>
+        </Label>
+        <StackLayout VerticalOptions="Center">           
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
                 <Label Text="Number1:" TextColor="White" FontAttributes="Bold" VerticalOptions="Center"/>
                 <Entry PlaceholderColor="White" Placeholder="Escriba su mensaje" HorizontalOptions="StartAndExpand" TextColor="White"
